--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,13 +10,13 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="Angular Nexus - Angular Conference in Paris" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="bg-[#0F0F11] text-white">
 		<slot />
 	</body>
 </html>
