--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Layout from '../layouts/Layout.astro';
     <Image src="/images/question.png" alt="Angular Nexus" height="200" width="200" />
     <h1 class="text-6xl font-bold text-center">ANGULAR NEXUS</h1>
     <p class="text-2xl mt-4">Paris, France</p>
-    <p class="text-2xl">September 2024
+    <p class="text-2xl">Early 2025</p>
     </main>
 </Layout>
 <style>
